continuando página de adicionar

--- a/jogo.html
+++ b/jogo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.css">
-    <link rel="stylesheet" href="css/style-main.css">
+    <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="/css/jogo.css">
     <title>Nome do Jogo</title>
 </head>
@@ -74,7 +74,16 @@
                     </div>
                 </div>
             </div>
-            <div class="main2"></div>
+            <div class="main2">
+                <div class="adicionar-jogo">
+                    <h3>Comprar Five Nights at Freddy's</h3>
+                    <i class="fa-brands fa-windows"></i>
+                </div>
+                <div class="preco-e-botao">
+                    <h3>R$10,89</h3>
+                    <button>+ Carrinho</button>
+                </div>
+            </div>
             <div class="main3"></div>
         </main>
         
