--- a/jogo.html
+++ b/jogo.html
@@ -83,8 +83,29 @@
                     <h3>R$10,89</h3>
                     <button>+ Carrinho</button>
                 </div>
+                <div class="sobre-o-jogo">
+                    <h3>Sobre este jogo</h3>
+                    <p>Welcome to your new summer job at Freddy Fazbear's Pizza, where kids and parents alike come for entertainment and food as far as the eye can see! The main attraction is Freddy Fazbear, of course; and his two friends. They are animatronic robots, programmed to please the crowds! The robots' behavior has become somewhat unpredictable at night however, and it was much cheaper to hire you as a security guard than to find a repairman.</p>
+                    <p>From your small office you must watch the security cameras carefully. You have a very limited amount of electricity that you're allowed to use per night (corporate budget cuts, you know). That means when you run out of power for the night- no more security doors and no more lights! If something isn't right- namely if Freddybear or his friends aren't in their proper places, you must find them on the monitors and protect yourself if needed!</p>
+                    <p>Can you survive five nights at Freddy's?</p>
+                    <p>"For all the simplicity of the game’s controls and premise, Five Nights at Freddy‘s is frightening. It’s a fantastic example of how cleverness in design and subtlety can be used to make an experience terrifying. Simple still images and proper character design steal the show in this game, and show that Scott Cawthon knows quite a lot about the secret fears people feel when looking at creepy dolls and toys. It’s elegant in how it sows fear, and is a must-own for anyone who likes scary games." -Joel Couture IndieGameMag.com</p>
+                    <p>This game was created using Clickteam Fusion!</p>
+                </div>
             </div>
-            <div class="main3"></div>
+            <div class="main3">
+                <div class="quantidade-jogador">
+                    <a href=""><i class="fa-solid fa-user"></i>Um jogador</a>
+                </div>
+                <div class="classificacao">
+                    <div class="classificacao1">
+                        <img src="img/fnaf_classificacao.png" alt="">
+                        <h5>MEDO, TEMAS SENSÍVEIS</h5>
+                    </div>
+                    <div class="classificacao2">
+                        <h5>Classificação: Coordenação de Classificação Indicativa</h5>
+                    </div>
+                </div>
+            </div>
         </main>
         
         
