--- a/index.html
+++ b/index.html
@@ -83,23 +83,37 @@
             </aside>
             <destaque>
                 <div class="slider">
-                    <div class="slide-destaque">
+                    <div class="slides">
                         <input type="radio" name="radio-btn" id="radio1">
                         <input type="radio" name="radio-btn" id="radio2">
                         <input type="radio" name="radio-btn" id="radio3">
                         <input type="radio" name="radio-btn" id="radio4">
-                        <input type="radio" name="radio-btn" id="radio5">
-                        <input type="radio" name="radio-btn" id="radio6">
-                        <input type="radio" name="radio-btn" id="radio7">
-                        <input type="radio" name="radio-btn" id="radio8">
-                        <input type="radio" name="radio-btn" id="radio9">
-                        <input type="radio" name="radio-btn" id="radio10">
-                        <input type="radio" name="radio-btn" id="radio11">
-                        <input type="radio" name="radio-btn" id="radio12">
-                    
-                    <div class="slide-first">
-                        
+
+                        <div class="slide first">
+                            <img src="/img/Age of Empires/banner.jpg" alt="">
+                        </div>
+                        <div class="slide">
+                            <img src="/img/Baldur/banner.jpg" alt="">
+                        </div>
+                        <div class="slide">
+                            <img src="/img/Arma 3/banner.jpg" alt="">
+                        </div>
+                        <div class="slide">
+                            <img src="/img/Far Cry 5/banner.jpg" alt="">
+                        </div>
+
+                        <div class="navigation-auto">
+                            <div class="auto-btn1"></div>
+                            <div class="auto-btn2"></div>
+                            <div class="auto-btn3"></div>
+                            <div class="auto-btn4"></div>
+                        </div>
                     </div>
+                    <div class="manual-navigation">
+                        <label for="radio1" class="manual-btn"></label>
+                        <label for="radio2" class="manual-btn"></label>
+                        <label for="radio3" class="manual-btn"></label>
+                        <label for="radio4" class="manual-btn"></label>
                     </div>
                 </div>
             </destaque>
