páginas st6 e bg3

--- a/carrinho.html
+++ b/carrinho.html
@@ -55,7 +55,7 @@
                 <div class="main2-1">
                     <div class="jogo">
                         <img src="/img/fnaf.jpg" alt="">
-                        <a href="">Five Nights at Freddy's</a>
+                        <a href="fnaf.html">Five Nights at Freddy's</a>
                     </div>
                     <div class="preco">
                         <i class="fa-brands fa-windows"></i>
