--- a/carrinho.html
+++ b/carrinho.html
@@ -91,6 +91,9 @@
                 </div>
             </div>
             <div class="main3">
+                <a href="bg3.html"><img src="img/baldursgate3/bauldursgate3img.jpg" alt="" class="jogo"></a>
+                <a href="st6.html"><img src="img/streetfighter6/streetfighter6.jpg" alt="" class="jogo"></a>
+                <a href="fnaf.html"><img src="img/fnaf2.jpg" alt="" class="jogo"></a>
                 <img src="img/riftbreak.jpg" alt="">
                 <img src="img/otxo.png" alt="">
                 <img src="img/ixion.jpg" alt="">
