--- a/st6.html
+++ b/st6.html
@@ -36,7 +36,7 @@
             <div class="main1">
                 <div class="menu">
                     <div class="carrinho">
-                        <button class="carrinho-botao">Carrinho (1)</button>
+                        <a href="carrinho.html"><button class="carrinho-botao">Carrinho (1)</button></a>
                     </div>
                     <ul class="ul-menu">
                         <li class="li-menu"><a href="">Sua Loja</a></li>
@@ -80,7 +80,7 @@
                     <i class="fa-brands fa-windows"></i>
                 </div>
                 <div class="preco-e-botao">
-                    <h3>59,99€</h3>
+                    <h3>R$ 249,00</h3>
                     <button>+ Carrinho</button>
                 </div>
                 <div class="sobre-o-jogo">
