--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 <div class="categoria">
                     <span>Explore por Categoria</span>
                     <button>Descubra Mais</button>
-                    <div class="Cat">
+                    <div class="cat">
                         <div class="box-cat"></div>
                         <div class="box-cat"></div>
                         <div class="box-cat"></div>
@@ -189,10 +189,18 @@
                 <div class="navegar">
                     <span>NAVERGAR PELO STEAM</span>
                     <div class="nav-container">
-                        <div class="nav-box"></div>
-                        <div class="nav-box"></div>
-                        <div class="nav-box"></div>
-                        <div class="nav-box"></div>
+                        <div class="nav-box">
+                            <span>LANÇAMENTOS</span>
+                        </div>
+                        <div class="nav-box">
+                            <span>OFERTAS</span>
+                        </div>
+                        <div class="nav-box">
+                            <span>JOGOS GRATUITOS</span>
+                        </div>
+                        <div class="nav-box">
+                            <span>MARCADORES</span>
+                        </div>
                     </div>
                 </div>
             </recomenda>
