nem lembro o que alterei

--- a/bg3.html
+++ b/bg3.html
@@ -49,7 +49,7 @@
                     </ul>
                 </div>
                 <a href="" class="todos-os-produtos">Todos os jogos </a><span>> Baldur's Gate 3</span>
-                <h2>Baldur's Gate 3</h2>
+                <h2 class="nome-jogo-e-central">Baldur's Gate 3<button>Central da comunidade</button></h2>
                 <div class="trailer-e-descricao">
                     <div class="trailer">
                         <iframe width="630" height="354.375" src="https://www.youtube.com/embed/1T22wNvoNiU?si=_Q0Ioa00KDIBNReZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -169,5 +169,8 @@
             </div>
         </footer>
     </div>
+
+    <script href="/js/script.js"></script>
+
 </body>
 </html>
