--- a/carrinho.html
+++ b/carrinho.html
@@ -66,7 +66,7 @@
                 <div class="main2-2">
                     <div class="total-e-preco">
                         <span>Total estimado<sup>1</sup></span>
-                        <span>R$10,89</span>
+                        <span id="totalCarrinho">R$10,89</span>
                     </div>
                     <span class="descricao-presente">Esta compra é para você ou é um presente? Escolha um para continuar com a finalização do pedido.</span>
                     <div class="botoes-compra">
@@ -154,5 +154,8 @@
             </div>
         </footer>
     </div>
+
+    <script href="/js/script.js"></script>
+
 </body>
 </html>
