--- a/st6.html
+++ b/st6.html
@@ -49,7 +49,7 @@
                     </ul>
                 </div>
                 <a href="" class="todos-os-produtos">Todos os jogos </a><span>> Street Fighter™ 6</span>
-                <h2>Street Fighter™ 6</h2>
+                <h2 class="nome-jogo-e-central">Street Fighter™ 6<button>Central da comunidade</button></h2>
                 <div class="trailer-e-descricao">
                     <div class="trailer">
                         <iframe width="630" height="354.375" src="https://www.youtube.com/embed/qqW4ENjH-pg?si=JBM2-vx5lKSRDr0n" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -169,5 +169,8 @@
             </div>
         </footer>
     </div>
+
+    <script href="/js/script.js"></script>
+
 </body>
 </html>
