--- a/index.html
+++ b/index.html
@@ -133,13 +133,13 @@
             <recomenda>
                 <div class="ofertas">
                     <div class="ofertas-top">
-                        <span>Ofertas Especiais</span>
-                        <button>Descubra Mais</button></div>
+                        <span>OFERTAS ESPECIAIS</span>
+                        <button>DESCUBRA MAIS</button></div>
                     <div class="oferta">
                         <div class="ofer1">
                             <div class="img"></div>
                             <div class="price">
-                                <span>OFERTA DO FIM DE SEMANA</span>
+                                <h4>OFERTA DO FIM DE SEMANA</h4>
                                 <span>Oferta do fim de semana</span>
                                 <div class="preco">
                                     <span>Até -80%</span>
@@ -149,7 +149,7 @@
                         <div class="ofer1">
                             <div class="img"></div>
                             <div class="price">
-                                <span>OFERTA DO FIM DE SEMANA</span>
+                                <h4>OFERTA DO FIM DE SEMANA</h4>
                                 <span>Oferta válidaaté 29 de nov. às 14:00</span>
                                 <div class="preco">
                                     <span>Até -81%</span>
@@ -159,7 +159,7 @@
                         <div class="ofer2">
                             <div class="img"></div>
                             <div class="price">
-                                <span>Oferta do dia!</span>
+                                <h4>Oferta do dia!</h4>
                                 <div class="preco">
                                     <span>Até -90%</span>
                                 </div>
@@ -168,7 +168,7 @@
                         <div class="ofer2">
                             <div class="img"></div>
                             <div class="price">
-                                <span>Oferta do dia!</span>
+                                <h4>Oferta do dia!</h4>
                                 <div class="preco">                                    
                                     <span>Até -90%</span>
                                 </div>
@@ -180,10 +180,18 @@
                     <span>Explore por Categoria</span>
                     <button>Descubra Mais</button>
                     <div class="cat">
-                        <div class="box-cat"></div>
-                        <div class="box-cat"></div>
-                        <div class="box-cat"></div>
-                        <div class="box-cat"></div>
+                        <div class="box-cat">
+                            <span>ESTRÁTEGIA</span>
+                        </div>
+                        <div class="box-cat">
+                            <span>TRAMA EXCEPCIONAL</span>
+                        </div>
+                        <div class="box-cat">
+                            <span>CIDADES E COLONIZAÇÃO</span>
+                        </div>
+                        <div class="box-cat">
+                            <span>CASUAIS</span>
+                        </div>
                     </div>
                 </div>
                 <div class="navegar">
