--- a/index.html
+++ b/index.html
@@ -177,8 +177,10 @@
                     </div>
                 </div>
                 <div class="categoria">
-                    <span>Explore por Categoria</span>
-                    <button>Descubra Mais</button>
+                    <div class="cat-top">
+                        <span>EXPLORE POR CATEGORIA</span>
+                        <button>Descubra Mais</button>
+                    </div>
                     <div class="cat">
                         <div class="box-cat">
                             <span>ESTRÁTEGIA</span>
