algum visual novo

--- a/index.html
+++ b/index.html
@@ -212,10 +212,154 @@
                             <span>MARCADORES</span>
                         </div>
                     </div>
+                <div class="games">
+                    <div class="game">
+                        <span>Novidades populares</span>
+                    </div>
+                    <div class="game">
+                        <span>Mais vendidos</span>
+                    </div>
+                    <div class="game">
+                        <span>Mais aguardados</span>
+                    </div>
+                    <div class="game">
+                        <span>Oferta</span>
+                    </div>
                 </div>
             </recomenda>
             <main-cont>
-                <div class="games"></div>
+                <div class="gamez">
+                    <div class="game-cont">
+                        <div class="game-top">
+                            <span>Veja mais:</span>
+                            <button>Lançamentos</button>
+                        </div>
+                        <div class="gamez-box">
+                            <div class="box-left"></div>
+                            <div class="box-main">
+                                <h5>An Arcade Full of Cats</h5>
+                                <h6>Gatos, Objetos Ocultos, Relaxantes, Do bem</h6>
+                            </div>
+                            <div class="box-right">
+                                <span>Gratuito p/ Jogar</span>
+                            </div>
+                        </div>
+                        <div class="gamez-box">
+                            <div class="box-left"></div>
+                            <div class="box-main">
+                                <h5>Bopl Battle</h5>
+                                <h6>Ação, Multijogador, Local para 4 Jogadores, Luta 2</h6>
+                            </div>
+                            <div class="box-right">
+                                <span>R$ 28,04</span>
+                            </div>
+                        </div>
+                        <div class="gamez-box">
+                            <div class="box-left"></div>
+                            <div class="box-main">
+                                <h5>The Last Faith</h5>
+                                <h6>Metroidvania, Gráficos Pixelados, Soulslike</h6>
+                            </div>
+                            <div class="box-right">
+                                <span>R$ 89,10</span>
+                            </div>
+                        </div>
+                        <div class="gamez-box">
+                            <div class="box-left"></div>
+                            <div class="box-main">
+                                <h5>Backpack Hero</h5>
+                                <h6>Alta Rejogabilidade, Montgem de Decks</h6>
+                            </div>
+                            <div class="box-right">
+                                <span>R$ 33,99</span>
+                            </div>
+                        </div>
+                        <div class="gamez-box">
+                            <div class="box-left"></div>
+                            <div class="box-main">
+                                <h5>Coral Island</h5>
+                                <h6>Simulador Rural, Simulador de Vida Real, Relaxante</h6>
+                            </div>
+                            <div class="box-right">
+                                <span>R$ 89,99</span>
+                            </div>
+                        </div>
+                        <div class="gamez-box">
+                            <div class="box-left"></div>
+                            <div class="box-main">
+                                <h5>Blazing Sails</h5>
+                                <h6>Cooperativo, Combate Naval, Cooperativo Online</h6>
+                            </div>
+                            <div class="box-right">
+                                <span>R$ 30,54</span>
+                            </div>
+                        </div>
+                        <div class="gamez-box">
+                            <div class="box-left"></div>
+                            <div class="box-main">
+                                <h5>Disco Simulator: Prologue</h5>
+                                <h6>Casual, Simulação, Gerenciamento, Em Grupos</h6>
+                            </div>
+                            <div class="box-right">
+                                <span>Gratuito</span>
+                            </div>
+                        </div>
+                        <div class="gamez-box">
+                            <div class="box-left"></div>
+                            <div class="box-main">
+                                <h5>Gatekeeper</h5>
+                                <h6>Ação, Roguelike, Roguelite, Tiro</h6>
+                            </div>
+                            <div class="box-right">
+                                <span>Gratuito</span>
+                            </div>
+                        </div>
+                        <div class="gamez-box">
+                            <div class="box-left"></div>
+                            <div class="box-main">
+                                <h5>Black Gunner Wukong: Prologue</h5>
+                                <h6>Ação, Tiro com Saques, Tiro em Terceira Pessoa</h6>
+                            </div>
+                            <div class="box-right">
+                                <span>Gratuito p/ Jogar</span>
+                            </div>
+                        </div>
+                        <div class="gamez-box">
+                            <div class="box-left"></div>
+                            <div class="box-main">
+                                <h5>Call of Duty: Modern Warface III</h5>
+                                <h6>Ação, Tiro em Primeira Pessoa (FPS), Tiro</h6>
+                            </div>
+                            <div class="box-right">
+                                <span>R$ 299,00</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="info-gamez">
+                        <h3>Call of Duty: Modern Warface</h3>
+                        <div class="analise">
+                            <Span>Análise de usuários:</Span>
+                            <h4>Ligeramente negativas</h4>
+                        </div>
+                        <div class="tag">
+                            <div class="tag-box">
+                                <span>Ação</span>
+                            </div>
+                            <div class="tag-box">
+                                <span>Tiro em Primeira Pessoa (FPS)</span>
+                            </div>
+                            <div class="tag-box">
+                                <span>Tiro</span>
+                            </div>
+                        </div>
+                        <div class="gamez-bot">
+                            <div class="gamez-box"></div>
+                            <div class="gamez-box"></div>
+                            <div class="gamez-box"></div>
+                            <div class="gamez-box"></div>
+                        </div>
+                    </div>
+                </div>
                 <div class="promo">
                     <span>Por até R$ 20</span>
                     <button>Por até $20</button>
