--- a/index.html
+++ b/index.html
@@ -361,26 +361,44 @@
                     </div>
                 </div>
                 <div class="promo">
-                    <span>Por até R$ 20</span>
-                    <button>Por até $20</button>
-                    <button>Por até $10</button>
-                    <div class="promo-container">
-                        <div class="promo-box"></div>
-                        <div class="promo-box"></div>
-                        <div class="promo-box"></div>
-                        <div class="promo-box"></div>
+                    <div class="promo-top">
+                        <span>Por até R$ 20</span>
+                        <button>Por até $20</button>
+                        <button>Por até $10</button>
                     </div>
-                </div>
-                <div class="ofertas">
-                    <span>ATUALIZAÇÕES E OFERTAS</span>
-                    <div class="ofertas-container">
-                        <div class="ofertas-box1"></div>
-                        <div class="ofertas-box2"></div>
-                        <div class="ofertas-box2"></div>
-                        <div class="ofertas-box2"></div>
-                        <div class="ofertas-box2"></div>
-                        <div class="ofertas-box2"></div>
-                        <div class="ofertas-box2"></div>
+                    <div class="promo-container">
+                        <div class="promo-box">
+                            <div class="background"></div>
+                            <div class="info">
+                                <div class="price">
+                                    <span>R$ 16,99</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="promo-box">
+                            <div class="background"></div>
+                            <div class="info">
+                                <div class="price">
+                                    <span>R$ 19,99</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="promo-box">
+                            <div class="background"></div>
+                            <div class="info">
+                                <div class="price">
+                                    <span>R$ 19,99</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="promo-box">
+                            <div class="background"></div>
+                            <div class="info">
+                                <div class="price">
+                                    <span>R$ 10,99</span>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </main-cont>
