--- a/carrinho.html
+++ b/carrinho.html
@@ -51,18 +51,47 @@
                 <a href="" class="todos-os-produtos">Todos os produtos </a><span>> Seu carrinho de compras</span>
                 <h2>SEU CARRINHO DE COMPRAS</h2>
             </div>
+
+
             <div class="main2">
-                <div class="main2-1">
+
+                <div class="main2-1-fnaf">
                     <div class="jogo">
                         <img src="/img/fnaf.jpg" alt="">
                         <a href="fnaf.html">Five Nights at Freddy's</a>
                     </div>
                     <div class="preco">
                         <i class="fa-brands fa-windows"></i>
-                        <span>R$10,89</span>
-                        <a href="" class="a-remover">Remover</a>
+                        <span>R$ 10,89</span>
+                        <a href="" class="a-remover" id="remover">Remover</a>
                     </div>
                 </div>
+
+                <div class="main2-1-st6">
+                    <div class="jogo">
+                        <img src="/img/streetfighter6/st6imgcarrinho.jpg" alt="">
+                        <a href="st6.html">Street Fighter™ 6</a>
+                    </div>
+                    <div class="preco">
+                        <i class="fa-brands fa-windows"></i>
+                        <span>R$ 249,00</span>
+                        <a href="" class="a-remover" id="remover">Remover</a>
+                    </div>
+                </div>
+
+                <div class="main2-1-bg3">
+                    <div class="jogo">
+                        <img src="/img/baldursgate3/bg3imgcarrinho.jpg" alt="">
+                        <a href="bg3.html">Baldur's Gate 3</a>
+                    </div>
+                    <div class="preco">
+                        <i class="fa-brands fa-windows"></i>
+                        <span>R$ 199,99</span>
+                        <a href="" class="a-remover" id="remover">Remover</a>
+                    </div>
+                </div>
+
+
                 <div class="main2-2">
                     <div class="total-e-preco">
                         <span>Total estimado<sup>1</sup></span>
@@ -90,6 +119,8 @@
                     </div>
                 </div>
             </div>
+
+
             <div class="main3">
                 <a href="bg3.html"><img src="img/baldursgate3/bauldursgate3img.jpg" alt="" class="jogo"></a>
                 <a href="st6.html"><img src="img/streetfighter6/streetfighter6.jpg" alt="" class="jogo"></a>
@@ -155,7 +186,7 @@
         </footer>
     </div>
 
-    <script href="/js/script.js"></script>
+    <script src="/js/script.js"></script>
 
 </body>
 </html>
