--- a/bg3.html
+++ b/bg3.html
@@ -170,7 +170,7 @@
         </footer>
     </div>
 
-    <script href="/js/script.js"></script>
+    <script src="/js/script.js"></script>
 
 </body>
 </html>
