--- a/fnaf.html
+++ b/fnaf.html
@@ -164,7 +164,7 @@
         </footer>
     </div>
 
-    <script href="/js/script.js"></script>
+    <script src="/js/script.js"></script>
 
 </body>
 </html>
