--- a/fnaf.html
+++ b/fnaf.html
@@ -76,7 +76,7 @@
             </div>
             <div class="main2">
                 <div class="adicionar-jogo">
-                    <h3>Comprar Five Nights at Freddy's</h3>
+                    <h3>Comprar <span>Five Nights at Freddy's</span></h3>
                     <i class="fa-brands fa-windows"></i>
                 </div>
                 <div class="preco-e-botao">
