media das páginas dos jogos

--- a/bg3.html
+++ b/bg3.html
@@ -36,7 +36,7 @@
             <div class="main1">
                 <div class="menu">
                     <div class="carrinho">
-                        <a href="carrinho.html"><button class="carrinho-botao">Carrinho (1)</button></a>
+                        <a href="carrinho.html"><button class="carrinho-botao">Carrinho (<span></span>)</button></a>
                     </div>
                     <ul class="ul-menu">
                         <li class="li-menu"><a href="">Sua Loja</a></li>
