--- a/fnaf.html
+++ b/fnaf.html
@@ -36,7 +36,7 @@
             <div class="main1">
                 <div class="menu">
                     <div class="carrinho">
-                        <a href="carrinho.html" id="link-carrinho"><button class="carrinho-botao">Carrinho (1)</button></a>
+                        <a href="carrinho.html" id="link-carrinho"><button class="carrinho-botao">Carrinho (<span></span>)</button></a>
                     </div>
                     <ul class="ul-menu">
                         <li class="li-menu"><a href="">Sua Loja</a></li>
@@ -76,7 +76,7 @@
             </div>
             <div class="main2">
                 <div class="adicionar-jogo">
-                    <h3>Comprar <span>Five Nights at Freddy's</span></h3>
+                    <h3>Comprar Five Nights at Freddy's</h3>
                     <i class="fa-brands fa-windows"></i>
                 </div>
                 <div class="preco-e-botao">
