--- a/carrinho.html
+++ b/carrinho.html
@@ -36,7 +36,7 @@
             <div class="main1">
                 <div class="menu">
                     <div class="carrinho">
-                        <button class="carrinho-botao">Carrinho (1)</button>
+                        <button class="carrinho-botao">Carrinho (<span></span>)</button>
                     </div>
                     <ul class="ul-menu">
                         <li class="li-menu"><a href="">Sua Loja</a></li>
