mexendo no compra

--- a/compra.html
+++ b/compra.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style-compra.css">
     <title>Compra</title>
 </head>
 <body>
@@ -39,7 +40,8 @@
                 <div class="info-bot">
                     <input type="checkbox"><span>Aceito os termos do Acordo de Assinatura do Steam, Transações com pix serão autorizadas após serem pagas pelo qr-code</span>
                 </div>
-                <button>Continuar para o Boa Compra</button>
+                <div class="qrcode">
+                </div>
             </div>
         </main>
         <aside>
