--- a/compra.html
+++ b/compra.html
@@ -10,25 +10,27 @@
     <div class="container">
         <header>
             <div class="head">
-                <div class="head-left">
-                    <span>Revisão + Compra</span>
+                <div class="head-container">
+                    <div class="head-left">
+                            <span>Revisão + Compra</span>
+                    </div>
+                    <a href="index.html"><div class="head-right"></div></a>
                 </div>
-                <div class="head-right"></div>
             </div>
         </header>
         <main>
             <div class="item">
                 <div class="img"></div>
-                <div class="text"><span></span></div>
-                <div class="preco"></div>
+                <div class="text-item"><span></span></div>
+                <div class="preco"><span></span></div>
             </div>
             <div class="valor">
                 <div class="total-top">
-                    <span>Subtotal</span>
+                    <span>Subtotal:</span>
                     <h5>R$ <span class="subpreco"></span></h5>
                 </div>
                 <div class="total-bot">
-                    <span>Total</span>
+                    <span>Total:</span>
                     <h5>R$ <span class="total"></span></h5>
                 </div>
             </div>
@@ -38,16 +40,17 @@
                     <span>Opções de presente: Nenhuma, esta compra é para você proprio</span>
                 </div>
                 <div class="info-bot">
-                    <input type="checkbox"><span>Aceito os termos do Acordo de Assinatura do Steam, Transações com pix serão autorizadas após serem pagas pelo qr-code</span>
-                </div>
-                <div class="qrcode">
+                    <input type="checkbox"><span>Aceito os termos do Acordo de Assinatura do Steam, Transações com pix serão autorizadas após serem pagas pelo QR-CODE</span>
                 </div>
             </div>
         </main>
         <aside>
+            <div class="text">
             <h3>COMPRANDO NO STEAM</h3>
             <span>Quando você completar esta transação, o valor será debilitado da forma de pagamento, via pix e você poderá desfrutar dos seus jogos recem comprados</span>
-            <h3>COMPRANDO NO STEAM</h3>
+            <h3>COMPRANDO NO STEAM</h3></div>
+            <div class="qrcode">
+            </div>
         </aside>
     </div>
 </body>
